# claude-code-project-manager

./: .gitignore  CLAUDE.md  README.md  dashboard-test.sh  dashboard.sh  pyproject.toml  requirements.txt  setup.sh
dashboard/: app.py
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md  MACOS_ORCHESTRATION.md  SESSION_CONTEXT.md
pm/: __init__.py  __main__.py  cli.py  metadata.py
pm/database/: __init__.py  models.py
pm/generator/: __init__.py  prompts.py
pm/scanner/: __init__.py  detector.py  parser.py
scripts/: claude-launch.sh  claude-tmux.sh  shell-aliases.sh
tests/: __init__.py  conftest.py  test_cli.py  test_detector.py  test_e2e.py  test_models.py  test_parser.py  test_prompts.py
